# dlist

./: .gitignore  .travis.yml  ChangeLog  ChangeLog.md  LICENSE  README  README.md  cabal.haskell-ci  changelog.md  dlist.cabal  hpc-clean.sh  hpc.sh  license.md  readme.md  release.md
.github/: dependabot.yml
.github/workflows/: haskell-ci.yml  test.yml  upload.yml
Data/: DList.hs
Data/DList/: DNonEmpty.hs  Internal.hs  Unsafe.hs
Data/DList/DNonEmpty/: Internal.hs  Unsafe.hs
bench/: Main.hs  dlist-bench.cabal  readme.md
dlist-instances/: dlist-instances.cabal
dlist-instances/Data/DList/: Instances.hs
doc/: release.md
tests/: DListProperties.hs  DNonEmptyProperties.hs  ImportUnsafe.hs  Main.hs  OverloadedStrings.hs  Parallel.hs  Properties.hs  QuickCheckUtil.hs  Safe.hs
