name:                   dlist
version:                0.8.0.2
synopsis:               Difference lists
description:
  Difference lists are a list-like type supporting O(1) append. This is
  particularly useful for efficient logging and pretty printing (e.g. with the
  Writer monad), where list append quickly becomes too expensive.
category:               Data
license:                BSD3
license-file:           LICENSE
author:                 Don Stewart
maintainer:             Sean Leather <sean.leather@gmail.com>
copyright:              2006-2009 Don Stewart, 2013-2016 Sean Leather
homepage:               https://github.com/spl/dlist
bug-reports:            https://github.com/spl/dlist/issues
extra-source-files:     README.md,
                        ChangeLog.md
build-type:             Simple
cabal-version:          >= 1.9.2
tested-with:            GHC==7.0.4
                        GHC==7.2.2
                        GHC==7.4.2
                        GHC==7.6.3
                        GHC==7.8.4
                        GHC==7.10.3
                        GHC==8.0.1

source-repository head
  type:                 git
  location:             git://github.com/spl/dlist.git

library
  build-depends:
                        base >= 4 && < 5,
                        deepseq >= 1.1 && < 2
  extensions:           CPP
  exposed-modules:      Data.DList
  ghc-options:          -Wall

test-suite test
  type:                 exitcode-stdio-1.0
  main-is:              Main.hs
  other-modules:        OverloadedStrings
  hs-source-dirs:       tests
  build-depends:        dlist,
                        base,
                        Cabal,
                        QuickCheck < 2.10
  if impl(ghc >= 8)
    -- QuickCheck-2.9 introduced support for Semigroup and NonEmpty in base.
    -- It is required for testing base >= 4.9 (GHC >= 8).
    build-depends:      QuickCheck >= 2.9
  else
    build-depends:      QuickCheck >= 2.7
