name:                   dlist
version:                0.8.0.8
synopsis:               Difference lists
description:
  Difference lists are a list-like type supporting O(1) append. This is
  particularly useful for efficient logging and pretty printing (e.g. with the
  Writer monad), where list append quickly becomes too expensive.
category:               Data
license:                BSD3
license-file:           license.md
author:                 Don Stewart
maintainer:             Sean Leather <sean.leather@gmail.com>
copyright:              2006-2009 Don Stewart, 2013-2020 Sean Leather, 2017-2020 Oleg Grenrus, contributors
homepage:               https://github.com/spl/dlist
bug-reports:            https://github.com/spl/dlist/issues
extra-source-files:     readme.md,
                        changelog.md
                        tests/ImportUnsafe.hs
build-type:             Simple
cabal-version:          >= 1.9.2
tested-with:            GHC==7.0.4
                        GHC==7.2.2
                        GHC==7.4.2
                        GHC==7.6.3
                        GHC==7.8.4
                        GHC==7.10.3
                        GHC==8.0.2
                        GHC==8.2.2
                        GHC==8.4.4
                        GHC==8.6.5
                        GHC==8.8.3
                        GHC==8.10.1

source-repository head
  type:                 git
  location:             git://github.com/spl/dlist.git

library
  build-depends:
                        base >= 4 && < 5,
                        deepseq >= 1.1 && < 1.5
  extensions:           CPP
  exposed-modules:      Data.DList
                        Data.DList.Unsafe
  other-modules:        Data.DList.Internal
  if impl(ghc >= 8.0)
    exposed-modules:    Data.DList.DNonEmpty
    other-modules:      Data.DList.DNonEmpty.Internal
  ghc-options:          -Wall
  if impl(ghc >= 8.0)
    ghc-options:        -Wcompat
                        -Wincomplete-uni-patterns
                        -Wincomplete-record-updates
  if impl(ghc >= 8.2)
    ghc-options:        -Wmissing-home-modules
  if impl(ghc >= 8.4)
    ghc-options:        -Wpartial-fields
  if impl(ghc >= 8.10)
    ghc-options:        -Wmissing-safe-haskell-mode
                        -Wtrustworthy-safe

test-suite test
  type:                 exitcode-stdio-1.0
  main-is:              Main.hs
  other-modules:        DListProperties
                        OverloadedStrings
                        QuickCheckUtil
  if impl(ghc >= 8.0)
    other-modules:      DNonEmptyProperties
  hs-source-dirs:       tests
  build-depends:        dlist,
                        base,
                        -- QuickCheck-2.10 is the first version supporting
                        -- base-4.9 (ghc-8) without the Arbitrary NonEmpty
                        -- instance, which we include ourselves.
                        QuickCheck >= 2.10 && < 2.15
  ghc-options:          -Wall
  if impl(ghc >= 8.0)
    ghc-options:        -Wcompat
                        -Wincomplete-uni-patterns
                        -Wincomplete-record-updates
  if impl(ghc >= 8.2)
    ghc-options:        -Wmissing-home-modules
  if impl(ghc >= 8.4)
    ghc-options:        -Wpartial-fields
  if impl(ghc >= 8.10)
    ghc-options:        -Wmissing-safe-haskell-mode
                        -Wtrustworthy-safe
