cabal-version:          >= 1.10

name:                   dlist-bench
version:                0.1.0.0
license:                BSD3
license-file:           ../license.md
author:                 Oleg Grenrus, Sean Leather
maintainer:             Sean Leather <sean.leather@gmail.com>
copyright:              2017-2020 Oleg Grenrus, 2020 Sean Leather
extra-source-files:     readme.md
build-type:             Simple

executable dlist-bench
  hs-source-dirs:       . ..
  main-is:              Main.hs
  other-modules:        Data.DList
                        Data.DList.Internal
                        Data.DList.DNonEmpty
                        Data.DList.DNonEmpty.Internal
  build-depends:        base >= 4 && < 5,
                        criterion >= 1.5 && < 1.6,
                        deepseq >= 1.1 && < 1.5,
                        dlist-nonempty >= 0.1 && < 0.2
  default-language:     Haskell2010
  ghc-options:          -Wall
