name:                   dlist-instances
version:                0.1
synopsis:               Difference lists instances
description:
  See the dlist packages.
  This package is the canonical source for some orphan instances.
  Orphan instances are placed here to avoid dependencies elsewhere.
category:               Data
license:                BSD3
license-file:           LICENSE
author:                 Greg Weber
maintainer:             Greg Weber <greg@gregweber.info>, Sean Leather <sean.leather@gmail.com>
copyright:              2013 Greg Weber
homepage:               https://github.com/spl/dlist
bug-reports:            https://github.com/spl/dlist/issues
extra-source-files:     README.md,
                        ChangeLog.md
build-type:             Simple
cabal-version:          >= 1.9.2

source-repository head
  type:                 git
  location:             git://github.com/spl/dlist.git

library
  build-depends:
                        base >= 2 && < 5,
                        semigroups,
                        dlist

  ghc-options:          -Wall
  exposed-modules:      Data.DList.Instances
